--- a/material/templates/material/includes/material_js.html
+++ b/material/templates/material/includes/material_js.html
@@ -1,10 +1,25 @@
 {% load static %}
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/js/material.min.js"></script>
+<!-- script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/js/material.min.js"></script-->
+<script src="{% static 'material/material.js' %}"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/js/ripples.min.js"></script>
 <script src="{% static 'material/js/jquery.datetimepicker.js' %}"></script>
 <script src="{% static 'material/js/snackbar.min.js' %}"></script>
-<script>
+<script type="text/javascript">
     $.material.init();
+
+  $(function() {
+      function autofix() {
+          $('input[name=password]').removeClass('empty');
+          userInteracted();
+      }
+      function userInteracted() {
+          $('body').off('input propertychange', 'input[name=username]', autofix);
+          $('body,html').unbind("scroll mousedown DOMMouseScroll mousewheel keyup", userInteracted);
+      }
+
+      $('body').on('input propertychange', 'input[name=username]', autofix);
+      $("body,html").bind("scroll mousedown DOMMouseScroll mousewheel keyup", userInteracted);
+  });
 </script>
