--- a/material/frontend/templates/material/frontend/base.html
+++ b/material/frontend/templates/material/frontend/base.html
@@ -15,9 +15,10 @@
 
         {% block js %}
         <script src="{% static 'material/js/jquery-2.1.4.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.turbolinks/2.0.2/jquery.turbolinks.js"></script>
         <script src="{% static 'material/js/materialize.js' %}"></script>
         <script src="{% static 'material/frontend/js/jquery.activeNavigation.js' %}"></script>
-        <script src="{% static 'material/frontend/js/jquery.pjax.js' %}"></script>
+        <script src="{% static 'turbolinks/turbolinks.js' %}"></script>
         <script src="{% static 'material/frontend/js/frontend.js' %}"></script>
         {% endblock %}
 
