--- a/material/frontend/templates/material/frontend/base_module.html
+++ b/material/frontend/templates/material/frontend/base_module.html
@@ -1,4 +1,4 @@
-{% extends 'material/frontend/base_site.html,material/frontend/base_pjax.html'|pjax:request %}
+{% extends 'material/frontend/base_site.html' %}
 
 {% block title %}{{ current_module.label }} - {{ block.super }}{% endblock %}
 
